Freedom Sanbox Ant Deploy/src/objects/Purchase_Sales_Report__c.object
<CustomObject>
    <fields>
        <fullName>Absolute_Return__c</fullName>
        <label>Absolute Return</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Purchase Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Return__c</fullName>
        <label>Annualized Return</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Debt: Floating Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt: Liquid Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt: Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt: Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt: Ultra Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity: Tax Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid: Monthly Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid: Equity Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity : Shares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity: Diversified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Date__c</fullName>
        <label>Current Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DividendReivestment__c</fullName>
        <label>DividendReivestment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Purchase_Report</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Folio_Number__c</fullName>
        <label>Folio Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NAV_Date__c</fullName>
        <label>NAV Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NAV__c</fullName>
        <label>NAV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Gain__c</fullName>
        <label>Net Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheme_Name__c</fullName>
        <label>Scheme Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>DIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <label>Unique Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Purchase Sales Report</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Purchase Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Sales Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>